# docassemble-MAEvictionDefense

./: .gitignore  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  package.yml  pythontests.yml  run_form_tests.yml  valid_jinja2.yml  word_diff.yml
docassemble/MAEvictionDefense/: __init__.py  connect_gsheets_data.py  court_calendar.py  demographics.py  discovery.py  district_courts.json  gbls_intake.py  housing_courts.json  language.py  macourts.py  review.py
docassemble/MAEvictionDefense/data/questions/: all-variables.yml  basic-questions-gbls.yml  compel_discovery.yml  conditions.yml  condo_conversion.yml  consumer_protection.yml  control-order.yml  court_and_eviction.yml  discovery-logic.yml  discrimination_and_harassment.yml  emails.yml  endpoints.yml  eviction.attachments.yml  eviction.code.yml  eviction.cron.yml  eviction.en.yml  eviction.es.yml  eviction.yml  federal_poverty_level.yml  feedback.yml  foreclosure.yml  glossary.yml  help.yml  initial_defenses.yml  intervene.yml  interview-order.yml  landlord.yml  retaliation.yml  review_screen_test.yml  review_screens.yml  security_deposit_and_prepaid_rent.yml  subsidized_tenancy.yml  survey.yml  tenant_and_tenancy.yml  transfer.yml
docassemble/MAEvictionDefense/data/sources/: README.md  business_days.feature  claim-discovery-link.csv  court_dates.feature  discovery-map.csv  es-words.yml  eviction_es.xlsx  eviction_ht.xlsx  eviction_pt.xlsx  eviction_vi.xlsx  eviction_zh-t.xlsx  ht-words.yml  occupancy_ordinances.csv  pt-words.yml  vi-words.yml  zh-t-words.yml
docassemble/MAEvictionDefense/data/static/: al_audio.css  al_audio.js  analytics.js  autotrack.js  base3.css  custom.css  favicon.js  made.bootstrap.css  made.bootstrap.scss
docassemble/MAEvictionDefense/data/templates/: CompelDiscovery.docx  CompelDiscoveryWithInstructions.docx  CoverLetter.docx  InterpreterNotice.docx  InterveneMotion.docx  LateAnswerMotion.docx  NextSteps.docx  SummaryProcessAnswer.docx  SummaryProcessAnswer_Final.docx  SummaryProcessAnswer_Finaledit.docx  SummaryProcessDiscovery.docx  (+4 more)
tests/: conftest.py  test_business_days.py  test_court_calendar.py  test_demographics.py
tests/features/: court_dates.feature  example_test.feature
