[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MAEvictionDefense"
version = "0.5.0"
description = "A guided interview for pro se eviction defense in Massachusetts. Generates an Answer form, Request for Discovery, and accompanying forms and motions."
readme = "README.md"
authors = [
    { name="Quinten Steenhuis, Greater Boston Legal Services", email="qsteenhuis@gbls.org" },
]
dependencies = [
    "docassemble.MACourts>=0.59.4",
    "docassemble.PovertyScale>=2024.0.0",
    "docassemble.income>=0.0.36",
    "holidays>=0.45",
    "nameparser>=1.1.3",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://www.gbls.org"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
]

[[tool.mypy.overrides]]
module = [
    "bs4",
    "docassemble.*",
    "geopandas",
    "gspread",
    "nameparser",
    "oauth2client.*",
    "requests",
    "shapely.*",
    "usaddress",
    "uszipcode",
]
ignore_missing_imports = true
