[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MAEvictionDefense"
version = "0.5.0"
description = "A guided interview for pro se eviction defense in Massachusetts. Generates an Answer form, Request for Discovery, and accompanying forms and motions."
readme = "README.md"
authors = [
    { name="Quinten Steenhuis, Greater Boston Legal Services", email="qsteenhuis@gbls.org" },
]
dependencies = [
    "docassemble.ALToolbox>=0.17.0",
    "docassemble.MACourts>=0.59.4",
    "docassemble.PovertyScale>=2026.0.0",
    "docassemble.income>=0.0.36",
    "gspread",
    "nameparser>=1.1.3",
    "oauth2client",
    "usaddress",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://www.gbls.org"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [
    "bs4",
    "docassemble.*",
    "gspread",
    "nameparser",
    "oauth2client.*",
    "requests",
]
ignore_missing_imports = true
